clusters/wrtk8s/audiomass/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiomass
  namespace: audiomass
spec:
  selector:
    app: audiomass
  ports:
    - port: 80
      targetPort: http
      name: http
