clusters/wrtk8s/audiomass/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audio-tailscale
  namespace: audio
spec:
  ingressClassName: tailscale
  rules:
    - host: audio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audio
                port:
                  number: 80
  tls:
    - hosts:
        - audio
